--- a/.env
+++ b/.env
@@ -1,22 +1,6 @@
-# Postgres
-DB_HOST=localhost
-DB_USER=photo-gallery
-DB_PASSWORD=photo-gallery
-DB_NAME=photo-gallery
-DB_PORT=5432
-
-# Minio
-MINIO_ENDPOINT=localhost:9000
-MINIO_ROOT_USER=photo-gallery
-MINIO_ROOT_PASSWORD=photo-gallery
-PHOTOS_BUCKET=photos
-THUMBS_BUCKET=thumbs
-
-# RabbitMQ
-RABBITMQ_URL=amqp://guest:guest@localhost:5672
-QUEUE_NAME=worker
-BUCKET_EXCHANGE_NAME=bucket-notifications
-WORKER_EXCHANGE_NAME=worker-notifications
-
-# Api
+# GOOGLE_APPLICATION_CREDENTIALS=secrets.json
+PROJECT_ID=photo-gallery-1ecb9
+FIRESTORE_EMULATOR_HOST=localhost:8081
+PUBSUB_EMULATOR_HOST=localhost:7071
+STORAGE_EMULATOR_HOST=localhost:9199
 CONFIG_FILE=config.yaml
